--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "3.0.0beta6",
     "ejs": "*",
-    "socket.io": "~0.9.10"
+    "socket.io": "~0.9.10",
+    "mongoose": "~3.1.2"
   }
 }
