--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "3.0.0beta6",
     "ejs": "*",
     "socket.io": "~0.9.10",
-    "mongoose": "~3.1.2"
+    "mongoose": "~3.1.2",
+    "mocha": "~1.5.0"
   }
 }
